tests/NormalTests/paczka1/small_fuzzy/46873672.err
Error in line 1: 87VX A255 23,3
Error in line 8: 87VX A312 15,5
